kubernetes/deployment-x86_64.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-deployment
  namespace: default
  labels:
    app: echoserver-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver-app
  template:
    metadata:
      labels:
        app: echoserver-app
    spec:
      containers:
        - name: echoserver
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
