kubernetes/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: echoserver-lb
  namespace: ingress-nginx
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    app.kubernetes.io/name: ingress-nginx
  type: LoadBalancer
