kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 80
  selector:
    app: echoserver-app
