kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: echoserver-service
              servicePort: http
